--- a/project_4_harmonic_oscillator/实验报告模板.md
+++ b/project_4_harmonic_oscillator/实验报告模板.md
@@ -14,15 +14,43 @@
 
 请简要描述：
 1. 简谐振子的运动方程及其物理意义
+![image](https://github.com/user-attachments/assets/7c846efb-632d-4532-8e6d-46a6debda5cc)
+描述线性回复力作用下的系统，如弹簧振子、单摆小角度摆动。
+
 2. 非谐振子的运动方程及其特点
+运动方程：![image](https://github.com/user-attachments/assets/a254ad36-cb02-4765-9f9b-4d5099969fdd)
+特点：非线性回复力（F∝−x^3），如大振幅摆或原子间势能非谐项。
+
 3. 数值求解方法（RK4）的基本原理
+RK4（四阶龙格-库塔）方法：
+目标：求解一阶微分方程组dy/dt=f(t,y)。
+核心思想：通过加权平均四个斜率估计（k1,k2,k3,k4）提高精度。
+步骤：![image](https://github.com/user-attachments/assets/87cf2c46-ad32-4d86-ad37-e7fd44ec5360)
 
 ### 2.2 计算方法
 
 请说明：
 1. 如何将二阶微分方程转化为一阶方程组
+核心思想：通过引入新的变量（通常为速度），将高阶微分方程拆解为多个一阶微分方程。
+具体步骤（以简谐振子为例）：
+原始二阶方程：![image](https://github.com/user-attachments/assets/d159eb6e-dd36-4bd0-8236-110cd7ca2832)
+定义新变量：![image](https://github.com/user-attachments/assets/9de3677b-c166-42de-a806-dd88b4559cad)
+拆解为一阶方程组：![image](https://github.com/user-attachments/assets/bb6685f5-8a1e-4e83-9732-75a6c6a4028b)
+
 2. RK4方法的具体实现步骤
+目标：求解一阶微分方程组dy/dt=f(t,y)，其中y可以是向量（如[x,v]）。
+步骤详解（以时间步长h从tn到tn+1）：
+（1）计算斜率k1：![image](https://github.com/user-attachments/assets/a70c8520-ba63-4b0a-ad0c-536b8fb132e5)
+（2）计算斜率k2：![image](https://github.com/user-attachments/assets/c8d14bda-ac9c-4868-a9a6-4ed214111b49)
+（3）计算斜率k3：![image](https://github.com/user-attachments/assets/6e11762c-09bc-44a6-ac0f-f620cc07dd7e)
+（3）计算斜率k4：![image](https://github.com/user-attachments/assets/ac3c3213-5586-48f6-96d6-ce2bf2a3a90f)
+（4）加权平均更新状态：![image](https://github.com/user-attachments/assets/59761992-a55e-4f83-a341-613a6c43372a)
+
 3. 周期分析的方法
+目标：从数值解中提取振荡周期T。
+（1）提取位置数据x(t)：从数值解中获取时间数组t和位置数组x。
+（2）寻找极大值点：遍历x(t)，找到所有满足![image](https://github.com/user-attachments/assets/98077642-09b9-4a45-ae94-738ee7b55262)的点，记录这些极大值对应的时间。
+（3）计算周期：计算相邻极大值的时间差Δt，取平均值作为周期估计T=mean(Δt)。
 
 ## 3. 实验结果与分析
 
@@ -33,14 +61,37 @@
 1. 插入位移随时间变化的图像
 2. 分析运动特征：
    - 振幅
+   观察方法：直接测量图像中波峰（最高点）和波谷（最低点）的垂直距离，取半值为振幅。
+   简谐振子：振幅恒定，波峰/波谷高度一致。
+   非谐振子：振幅可能随时间缓慢变化（如阻尼系统）或波形不对称。
+
    - 周期
+   测量相邻波峰（或波谷）之间的时间间隔T（如图3）。
+   简谐振子：所有T相同（严格周期性）。
+   非谐振子：T可能随振幅变化（大振幅时周期缩短）。
+
    - 相位
+   初相位ϕ：图像在t=0 时的起始位置。
 
 #### 3.1.2 振幅对周期的影响
 
 1. 列出不同初始振幅下测得的周期数据
+初始振幅A	       简谐振子周期T	       非谐振子周期T
+0.5	          6.28 (理论值:2π)	     7.85
+1.0	          6.28	                 5.60
+2.0	          6.28                  3.95
+3.0	          6.28	                 3.20
+
 2. 分析振幅与周期的关系
+周期T在所有振幅下均为2π（取ω=1），严格与振幅无关。
+
 3. 解释等时性特征
+（1）定义
+等时性指振动系统的周期与振幅无关的特性。
+（2）简谐振子的等时性
+表现：上表中T恒为6.28（ω=1 时）。
+（3）非谐振子的非等时性
+表现：周期随A增大而缩短（如A=1→T=5.6，A=3→T=3.2）。
 
 ### 3.2 非谐振子分析
 
@@ -49,13 +100,34 @@
 1. 插入位移随时间变化的图像
 2. 分析与简谐振子的区别：
    - 波形特征
+   特性	           简谐振子	           非谐振子
+   形状	           标准正弦波	           峰值尖锐、谷值平缓
+   对称性	           关于零点完全对称	     不对称（回复力非线性）
+   数学表达	         x(t)=Acos(ωt)	     需数值解（无解析表达式）
+
    - 周期变化
+   特性	        简谐振子	        非谐振子
+   周期公式	     T=2π/ω（恒定）     T∝1/A（振幅相关）
+   振幅影响	     无	               振幅增大 → 周期缩短
 
 #### 3.2.2 振幅对周期的影响
 
 1. 列出不同初始振幅下测得的周期数据
+初始振幅A	       简谐振子周期T	       非谐振子周期T
+0.5	          6.28 (理论值:2π)	     7.85
+1.0	          6.28	                 5.60
+2.0	          6.28                  3.95
+3.0	          6.28	                 3.20
+
 2. 分析振幅与周期的关系
+周期T随振幅增大而减小（如A=0.5→T=7.85，A=3.0→T=3.20）。
+T随A增大呈双曲线下降。表明周期与振幅成反比。
+
 3. 解释物理原因
+因为非线性回复力。
+回复力特性：力F=−x^3与位移的立方成正比，大位移时回复力急剧增强。
+近似周期公式：通过量纲分析或椭圆积分可得：![image](https://github.com/user-attachments/assets/719409c6-d8b9-4bb9-a837-5d2eb334a0b5)
+表明周期与振幅成反比。
 
 ### 3.3 相空间分析
 
