--- a/project_1_lotka_volterra/实验报告模板.md
+++ b/project_1_lotka_volterra/实验报告模板.md
@@ -1,9 +1,9 @@
 # 项目1实验报告：Lotka-Volterra捕食者-猎物模型
 
-**学生姓名：** [请填写您的姓名]  
-**学号：** [请填写您的学号]  
-**完成日期：** [请填写完成日期]  
-**实验时间：** [请填写实验用时]
+**学生姓名：** 叶瑞昀  
+**学号：** 20231050034 
+**完成日期：** 20250528  
+**实验时间：** 2h
 
 ---
 
@@ -24,7 +24,20 @@
 请简要描述Lotka-Volterra方程组的数学形式和各参数的生物学意义：
 
 ```
-[请在此处填写方程组和参数说明]
+Lotka-Volterra方程组的数学形式如下：
+
+dx/dt = αx - βxy  
+dy/dt = γxy - δy
+
+其中：
+- x：猎物（如兔子）种群数量
+- y：捕食者（如狼）种群数量
+- α（alpha）：猎物的自然增长率（没有捕食者时的增长速度）
+- β（beta）：捕食者捕食猎物的效率（每对捕食-猎物相遇导致猎物减少的速率）
+- γ（gamma）：捕食者因捕食猎物而增加的速率（每对捕食-猎物相遇导致捕食者增加的速率）
+- δ（delta）：捕食者的自然死亡率（没有猎物时的减少速度）
+
+该方程描述了捕食者和猎物之间的相互作用及其种群数量随时间的变化。
 ```
 
 ### 2.2 数值方法原理
@@ -33,17 +46,27 @@
 
 **欧拉法：**
 ```
-[请描述欧拉法的基本思想和公式]
+欧拉法是一种最基本的显式数值积分方法。它用当前时刻的导数（斜率）来线性近似下一个时刻的函数值。公式为：
+y_{n+1} = y_n + h * f(y_n, t_n)
+其中 h 为步长，f(y_n, t_n) 为微分方程在当前点的斜率。
 ```
 
 **改进欧拉法：**
 ```
-[请描述改进欧拉法的改进之处]
+改进欧拉法（又称梯形法或Heun法）在欧拉法的基础上，先用欧拉法预测一个值，再用该预测值计算斜率的平均值，从而提高精度。公式为：
+k1 = h * f(y_n, t_n)
+k2 = h * f(y_n + k1, t_n + h)
+y_{n+1} = y_n + (k1 + k2) / 2
 ```
 
 **4阶龙格-库塔法：**
 ```
-[请描述RK4方法的优势]
+4阶龙格-库塔法（RK4）通过在每一步内多次采样斜率，并加权平均，极大提高了数值解的精度和稳定性。它综合了当前点、区间中点和终点的斜率信息，常用于科学计算。其公式为：
+k1 = h * f(y_n, t_n)
+k2 = h * f(y_n + k1/2, t_n + h/2)
+k3 = h * f(y_n + k2/2, t_n + h/2)
+k4 = h * f(y_n + k3, t_n + h)
+y_{n+1} = y_n + (k1 + 2*k2 + 2*k3 + k4) / 6
 ```
 
 ## 3. 实验方法与实现
@@ -63,12 +86,57 @@
 
 ```python
 # 例如：lotka_volterra_system函数
-[请粘贴您的核心代码]
+# lotka_volterra_system函数
+def lotka_volterra_system(state: np.ndarray, t: float, alpha: float, beta: float, 
+                          gamma: float, delta: float) -> np.ndarray:
+    """
+    Lotka-Volterra方程组的右端函数
+    参数:
+        state: [x, y] 当前状态向量
+        t: 时间（本系统中未显式使用）
+        alpha, beta, gamma, delta: 模型参数
+    返回:
+        导数向量 [dx/dt, dy/dt]
+    """
+    x, y = state
+    dxdt = alpha * x - beta * x * y
+    dydt = gamma * x * y - delta * y
+    return np.array([dxdt, dydt])]
 ```
 
 ```python
 # 例如：runge_kutta_4函数
-[请粘贴您的核心代码]
+[# runge_kutta_4函数
+def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float], 
+                  dt: float, *args) -> Tuple[np.ndarray, np.ndarray]:
+    """
+    4阶龙格-库塔法求解常微分方程组
+    参数:
+        f: 微分方程组的右端函数
+        y0: 初始条件向量
+        t_span: 时间范围 (t_start, t_end)
+        dt: 时间步长
+        *args: 传递给f的额外参数
+    返回:
+        t: 时间数组
+        y: 解数组，形状为 (len(t), len(y0))
+    """
+    t_start, t_end = t_span
+    t = np.arange(t_start, t_end + dt, dt)
+    n_steps = len(t)
+    n_vars = len(y0)
+    y = np.zeros((n_steps, n_vars))
+    y[0] = y0
+    for i in range(n_steps - 1):
+        h = dt
+        yi = y[i]
+        ti = t[i]
+        k1 = h * f(yi, ti, *args)
+        k2 = h * f(yi + k1/2, ti + h/2, *args)
+        k3 = h * f(yi + k2/2, ti + h/2, *args)
+        k4 = h * f(yi + k3, ti + h, *args)
+        y[i+1] = yi + (k1 + 2*k2 + 2*k3 + k4) / 6
+    return t, y
 ```
 
 ### 3.3 实现过程中遇到的问题
@@ -76,7 +144,19 @@
 请描述您在实现过程中遇到的主要问题及解决方法：
 
 ```
-[请描述遇到的问题和解决方案]
+1. 问题：matplotlib绘图时报错“AttributeError: module 'matplotlib.pyplot' has no attribute 'figure'”。
+   解决方法：检查是否有同名文件matplotlib.py导致模块冲突，并确保matplotlib已正确安装。
+
+2. 问题：pip不是内部或外部命令，无法安装依赖包。
+   解决方法：使用“python -m pip install 包名”进行安装，或将pip路径添加到环境变量。
+
+3. 问题：数值方法实现初期，欧拉法和改进欧拉法结果不稳定或发散。
+   解决方法：检查步长dt设置是否过大，并对算法公式进行逐步调试和验证。
+
+4. 问题：Lotka-Volterra方程参数传递出错，导致结果异常。
+   解决方法：统一参数顺序，确保所有函数调用时参数一致，并增加注释说明。
+
+通过上述方法，逐步解决了数值模拟和环境配置中的主要问题，保证了程序的正确运行和结果输出。
 ```
 
 ## 4. 实验结果
@@ -89,6 +169,7 @@
 [请粘贴时间序列图和相空间轨迹图]
 图4.1: Lotka-Volterra种群动力学
 左图：种群数量随时间变化；右图：相空间轨迹
+
 ```
 
 **观察结果描述：**
