--- a/project_4_harmonic_oscillator/实验报告模板.md
+++ b/project_4_harmonic_oscillator/实验报告模板.md
@@ -136,21 +136,71 @@ T随A增大呈双曲线下降。表明周期与振幅成反比。
 1. 插入相空间图
 2. 分析轨迹特征：
    - 形状
+   简谐振子的状态由位置x和速度v完全描述，其相空间轨迹为：
+   ![image](https://github.com/user-attachments/assets/bc6f0a39-dba6-417b-adaa-d8fb8c07a617)
+   几何形状：这是一个标准的椭圆
+
    - 对称性
+   时间反演对称性：轨迹关于x轴对称（v→−v 对称），体现动力学方程的时间可逆性。
+   能量守恒对称性：同一椭圆上的所有点对应相同的总能量 
+   旋转对称性（当ω=1）：相轨迹为圆，具有连续的旋转对称性。
+
    - 物理意义
+   （1）能量可视化：
+   椭圆面积πA⋅(ωA)=πωA^2正比于系统总能量E。
+   （2）运动状态表征：
+   椭圆上的点：瞬时状态(x,v)。
+   顺时针运动：表示相位演化（从x=A到x=−A 的振动过程）。
+   （3）稳定性体现：闭合椭圆轨迹表明系统无能量耗散，振动稳定。
 
 #### 3.3.2 非谐振子的相空间轨迹
 
 1. 插入相空间图
 2. 分析轨迹特征：
    - 与简谐振子的区别
+   特性	           简谐振子	            非谐振子
+   轨迹形状	        严格椭圆	            扭曲的闭合曲线（近似“压扁的椭圆”）
+   对称性	           时间反演对称 + 能量对称	可能仅保留时间反演对称性
+   能量依赖性	     椭圆缩放，形状不变	   轨迹形状随能量（振幅）显著变化
+
    - 形状变化的物理解释
+   （1） 轨迹扭曲的来源
+   非谐振子的回复力导致加速度随位移急剧增大。
+   高速区域：当粒子接近平衡位置（x≈0）时，速度v极大（因势能快速转化为动能）。
+   低速区域：在振幅端点（x≈±A），速度降为零，但加速度极大，导致轨迹在两端“尖锐化”。
+   （2）能量与形状的关系
+   低能量（小振幅）：回复力近似线性，轨迹接近椭圆（简谐极限）。
+   高能量（大振幅）：非线性项主导，势能增长更快，导致：
+   速度峰值更高：因动能在x≈0 时更大。
+   轨迹横向拉伸：相空间曲线在速度方向变宽，位置方向变窄。
 
 ### 3.4 能量分析
 
 1. 计算并绘制系统能量随时间的变化
 2. 验证能量守恒定律
+理论预期：
+保守系统（无阻尼、无外力）：总能量E(t) 应严格守恒（恒定值）。
+
+数值解的表现：
+简谐振子：能量应几乎恒定（仅受数值误差影响）。
+非谐振子：若数值方法精确，能量也应守恒。
+
+验证方法
+计算能量相对初始值的偏差：
+![image](https://github.com/user-attachments/assets/2d9320b2-7c66-4514-8050-ccc2ad502a07)
+
 3. 分析数值误差的来源
+(1) 算法误差
+截断误差：RK4方法的长时间积分可能累积全局误差。
+步长选择：
+过大步长导致能量漂移（如显式方法中能量虚假增长）。
+过小步长增加计算成本，但可能不显著提升精度。
+
+(2) 系统非线性
+非谐振子的非线性项导致微分方程刚度增加，需更小步长或隐式方法（如隐式RK）保持稳定性。
+
+(3) 初始条件与边界处理
+离散化初始条件（如v(0)=0 的数值表示）可能引入微小误差。
 
 ## 4. 讨论
 
