--- a/project_1_lotka_volterra/实验报告模板.md
+++ b/project_1_lotka_volterra/实验报告模板.md
@@ -164,9 +164,10 @@ def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float],
 ### 4.1 基本求解结果
 
 请在此处粘贴使用4阶龙格-库塔法求解得到的种群动力学图：
+![population_dynamics](https://github.com/user-attachments/assets/ebc32ce9-464c-43c8-87a6-f4460e77d774)
 
 ```
-[请粘贴时间序列图和相空间轨迹图]
+
 图4.1: Lotka-Volterra种群动力学
 左图：种群数量随时间变化；右图：相空间轨迹
 
@@ -174,30 +175,29 @@ def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float],
 
 **观察结果描述：**
 ```
-[请描述图中观察到的现象，如周期性变化、相位关系等]
+从左侧的时间序列图可以看到，猎物（Prey）和捕食者（Predator）种群数量均呈现周期性波动，且两者的峰值存在一定的相位差。右侧的相空间轨迹图显示，系统状态在相空间中形成封闭轨道，说明种群数量随时间循环变化，系统表现出典型的周期性动力学行为。
 ```
 
 ### 4.2 数值方法比较
 
 请在此处粘贴三种数值方法的比较图：
+![method_comparison](https://github.com/user-attachments/assets/c81de8d3-8841-40b7-96ac-02515c97a127)
 
 ```
-[请粘贴方法比较图]
 图4.2: 三种数值方法比较
 上排：时间序列比较；下排：相空间比较
 ```
 
 **比较结果分析：**
 
-| 方法 | 计算精度 | 计算效率 | 稳定性 | 守恒量误差 |
-|------|----------|----------|--------|------------|
-| 欧拉法 | [填写] | [填写] | [填写] | [填写] |
-| 改进欧拉法 | [填写] | [填写] | [填写] | [填写] |
-| 4阶RK法 | [填写] | [填写] | [填写] | [填写] |
-
-### 4.3 参数影响分析
+| 方法         | 计算精度           | 计算效率      | 稳定性         | 守恒量误差      |
+|--------------|-------------------|--------------|---------------|----------------|
+| 欧拉法       | 低                | 高           | 差            | 大             |
+| 改进欧拉法   | 中                | 中           | 较好          | 中             |
+| 4阶RK法      | 高                | 较低         | 很好          | 小             |
 
 请在此处粘贴不同初始条件下的结果图：
+![parameter_analysis](https://github.com/user-attachments/assets/e40f8d6e-ef4f-4ee6-a651-7062a8fedbbc)
 
 ```
 [请粘贴参数分析图]
@@ -206,7 +206,12 @@ def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float],
 
 **参数敏感性分析：**
 ```
-[请分析不同初始条件对系统行为的影响]
+不同初始条件（如不同的猎物和捕食者初始数量）会影响系统在相空间中的轨道形状和振幅，但不会改变系统的周期性本质。具体表现为：
+
+- 各组初始条件下，种群数量随时间的变化曲线均呈现周期性波动，但最大值和最小值不同。
+- 相空间轨迹为封闭曲线，轨道的大小和形状取决于初始种群数量，说明系统的能量守恒量与初始状态有关。
+- 不同初始条件下，系统不会收敛到同一个轨道，而是围绕不同的能量水平线循环。
+- 总体来看，Lotka-Volterra系统对初始条件敏感，但始终保持周期性和守恒特性。
 ```
 
 ## 5. 结果分析与讨论
@@ -217,34 +222,35 @@ def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float],
 
 **种群动力学特征：**
 ```
-[请分析猎物和捕食者数量变化的规律]
+实验结果显示，猎物和捕食者的数量均呈现周期性波动。猎物数量上升时，捕食者数量随后也会增加；当捕食者数量达到高峰后，由于对猎物的捕食作用，猎物数量开始下降，进而导致捕食者数量也随之减少。随后，猎物数量恢复，周期循环往复。这种周期性变化是Lotka-Volterra模型的典型特征。
 ```
 
 **相互作用机制：**
 ```
-[请解释捕食者与猎物之间的相位关系]
+捕食者与猎物的数量变化存在明显的相位差。通常，猎物数量的峰值出现在捕食者数量峰值之前。原因在于猎物数量增加为捕食者提供了更多食物资源，促进捕食者数量增长；而捕食者数量过多时会导致猎物数量下降，进而捕食者数量也减少。这种相互作用机制导致两者数量的周期性波动和相位关系。
 ```
 
 **生态平衡：**
 ```
-[请讨论系统的稳定性和平衡状态]
+系统表现出动态的生态平衡。虽然种群数量不断波动，但在参数不变的情况下，系统不会出现种群灭绝或无限增长，而是围绕某一平衡点周期性变化。这种平衡状态反映了自然界中捕食-被捕食关系下的生态稳定性，即在没有外部干扰和资源变化时，捕食者和猎物可以长期共存，维持生态系统的动态平衡。
 ```
+
 
 ### 5.2 数值方法评估
 
 **精度比较：**
 ```
-[请比较三种方法的精度，并解释原因]
+4阶Runge-Kutta法（RK4）精度最高，能够很好地保持系统的周期性和守恒量，数值误差最小。改进欧拉法（Heun法）精度次之，误差较小但长期积分时守恒量会有缓慢漂移。欧拉法精度最低，误差较大，容易导致系统发散或守恒量严重偏离。精度的差异主要源于各方法对微分方程近似的阶数不同，RK4为四阶，改进欧拉为二阶，欧拉法为一阶。
 ```
 
 **计算效率：**
 ```
-[请比较计算时间和资源消耗]
+欧拉法计算效率最高，单步只需一次函数计算，适合快速粗略模拟。改进欧拉法每步需两次函数计算，效率适中。RK4每步需四次函数计算，计算量最大，但在相同精度要求下可用较大步长，整体效率未必最低。实际应用中，若对精度要求高，RK4更优；对速度要求高且精度要求不高时可选欧拉法。
 ```
 
 **适用性分析：**
 ```
-[请讨论在什么情况下选择哪种方法]
+当问题对精度和长期稳定性要求较高（如研究守恒量、周期行为等）时，应优先选择4阶Runge-Kutta法。改进欧拉法适合对精度有一定要求但又希望兼顾效率的场合。欧拉法仅适用于教学演示或对精度要求极低的初步探索，不建议用于实际科学计算。对于刚性方程或更复杂系统，还需考虑更高级的自适应或隐式方法。
 ```
 
 ## 6. 思考题
@@ -256,19 +262,21 @@ def runge_kutta_4(f, y0: np.ndarray, t_span: Tuple[float, float],
 
 **回答：**
 ```
-[请回答]
+Lotka-Volterra系统表现出周期性行为，是因为捕食者和猎物之间存在相互依赖和反馈机制：猎物数量增加时，为捕食者提供了更多食物，导致捕食者数量随后增加；而捕食者数量过多时，会加速猎物数量的减少，进而捕食者因食物短缺而减少。随着捕食者数量下降，猎物数量又得以恢复，如此循环往复，形成周期性波动。
+
+在现实生态系统中，类似的周期性现象确实存在。例如，北美的雪兔和猞猁种群数量就呈现出明显的周期性波动。但实际生态系统比Lotka-Volterra模型更复杂，受多种因素影响（如环境变化、疾病、迁徙等），因此周期性可能不如理想模型中那样规则和持久，但周期性动力学依然是许多生态系统的重要特征之一。
 ```
 
 
 
 **实验报告完成情况自评：**
 
-- [ ] 完成了所有必需的函数实现
-- [ ] 通过了所有测试用例
-- [ ] 生成了所有要求的图表
-- [ ] 完成了结果分析和讨论
-- [ ] 回答了所有思考题
+- [√] 完成了所有必需的函数实现
+- [√] 通过了所有测试用例
+- [√] 生成了所有要求的图表
+- [√] 完成了结果分析和讨论
+- [√] 回答了所有思考题
 
-**总体评价：** [请对自己的实验完成情况进行总体评价]
+**总体评价：** 完美
 
-**建议成绩：** [请根据完成质量自评建议成绩] / 100分
+**建议成绩：** 100 / 100分
