--- a/project_5_van_der_pol/实验报告模板.md
+++ b/project_5_van_der_pol/实验报告模板.md
@@ -17,12 +17,18 @@
 2. 方程中各参数的物理意义
 3. 非线性阻尼的作用机制
 
+![image](https://github.com/user-attachments/assets/51dd898a-c399-4ada-854b-f7ea40fadd1f)
+
+
 ### 2.2 计算方法
 
 请说明：
 1. 方程的数值求解方法（RK4）
 2. 相空间分析方法
 3. 极限环特征的提取方法
+![image](https://github.com/user-attachments/assets/ca4a23c6-adc1-4501-a8cc-9e99252ecd9c)
+
+
 
 ## 3. 实验结果与分析
 
@@ -31,18 +37,34 @@
 #### 3.1.1 时间演化
 
 1. 插入位移和速度随时间变化的图像（μ = 1）
+![Figure_1](https://github.com/user-attachments/assets/fd3c94cd-26df-4a8d-89bf-e8a752418154)
+
+
 2. 分析运动特征：
    - 初始阶段的行为
    - 稳态振荡的特征
    - 振幅和频率的稳定性
+```
+初始阶段，系统表现为非周期性变化，存在明显瞬态行为；
+随时间推移，系统收敛至稳定振荡状态（极限环）；
+振幅和频率最终趋于稳定，体现出非线性系统的稳态振荡特性。
+```
 
 #### 3.1.2 相空间分析
 
 1. 插入相空间轨迹图
+![Figure_5](https://github.com/user-attachments/assets/ae21f415-025f-4024-82fb-fc46b844baf8)
+
+
 2. 分析：
    - 轨迹的演化过程
    - 极限环的形成
    - 稳态轨迹的特征
+```
+相空间轨迹显示从螺旋收敛逐渐形成一个封闭轨道（极限环）；
+极限环反映出系统的吸引子行为；
+相轨迹为单一闭合曲线，表示系统对初始条件的稳定吸引。
+```
 
 ### 3.2 参数影响分析
 
@@ -53,10 +75,26 @@
    - 相空间轨迹
    - 极限环大小
 
+![Figure_2](https://github.com/user-attachments/assets/0ab75fa2-be7c-4443-82f1-ed843c96ee16)
+![Figure_5](https://github.com/user-attachments/assets/764d6aeb-eaca-40bf-a8c9-61045baa8806)
+![Figure_3](https://github.com/user-attachments/assets/e0b2979e-4bd5-4ff4-8d2a-c65ee0511b64)
+![Figure_6](https://github.com/user-attachments/assets/87ca1676-dbe7-4883-8bda-ae802b2e7d20)
+![Figure_4](https://github.com/user-attachments/assets/edf1e9e6-8b54-4b49-a34e-de75b42822b2)
+![Figure_7](https://github.com/user-attachments/assets/6f3da224-0c2a-4ff8-8dc0-787d3b16967a)
+
+
+
+
 2. 分析μ值对以下特征的影响：
    - 振荡幅度
    - 振荡周期
    - 稳态达到时间
+```
+随 μ 增大，振幅增大，周期略有减小；
+稳态时间显著减少，系统更快收敛至极限环；
+相空间轨迹在 μ 增大时更“尖锐”，表明速度的突变更显著，系统刚性增强。
+```
+
 
 #### 3.2.2 定量分析
 
@@ -64,12 +102,13 @@
 
 | μ值 | 极限环振幅 | 振荡周期 | 稳态时间 |
 |-----|------------|----------|----------|
-| 1   |            |          |          |
-| 2   |            |          |          |
-| 4   |            |          |          |
+| 1   |    2.009        |   6.666       |    72.40      |
+| 2   |     2.019       |   7.623       |     66.78     |
+| 4   |     2.023       |    10.195      |     57.65     |
 
 2. 分析数据趋势并解释物理原因
 
+极限环随 μ 的变化表现出典型的非线性增强特征：阻尼从线性转向非线性，自调节机制更强，吸引特性更明显。
 
 ### 3.3 初始条件的影响
 
@@ -77,19 +116,36 @@
    - 轨迹的收敛性
    - 最终极限环的一致性
 2. 分析系统的吸引子特性
+```
+选取多个初始条件（如 [0.5, 0], [2, 0], [1, 1] 等），所有轨迹最终均收敛至相同极限环；
+这表明系统存在唯一稳定吸引子，与混沌系统的敏感性相对；
+极限环的存在意味着系统对初始条件具有结构稳定性。
+```
+
 
 ## 4. 讨论
 
 请讨论以下问题：
 
 1. van der Pol振子与简谐振子的本质区别是什么？
-
+```
+简谐振子具有恒定频率和线性阻尼，振幅随时间衰减；
+van der Pol 振子拥有自激机制，能量通过非线性阻尼调节，使系统稳定振荡。
+```
 2. 非线性阻尼参数μ如何影响系统的以下特性：
    - 振荡的稳定性
    - 能量的平衡机制
    - 相空间轨迹的形状
-
+```
+振荡稳定性： 增大μ增强非线性调节能力，稳态更稳定；
+能量机制： 小振幅阶段输入能量，大振幅阶段消耗能量，实现自调节；
+相图形状： μ越大，相轨迹越尖锐，系统表现出更强非线性。
+```
 3. van der Pol振子模型在实际中的应用例子和局限性
+```
+应用于电子振荡器、生理节律模型（心脏起搏、呼吸节律）；
+局限在于仅能描述一种类型的自激系统，不适用于混沌、多稳定态系统等更复杂动力学。
+```
 
 ## 5. 结论
 
@@ -98,9 +154,103 @@
 2. 参数μ对系统行为的影响规律
 3. 极限环振荡的形成机制
 4. 数值方法的有效性评估
+```
+van der Pol振子是一类具有非线性阻尼、自激机制的振荡系统；
+μ参数决定了振荡的非线性强度，对振幅、频率和收敛速率有显著影响；
+极限环为系统的吸引子，表现出稳定自激振荡；
+数值方法（RK45）能有效捕捉系统的动态特征，适合非线性系统模拟分析。
+```
 
 ## 附录：代码
-```python
-# 请在此处粘贴代码
+```
+import numpy as np
+import matplotlib.pyplot as plt
+from scipy.integrate import solve_ivp
+from typing import Tuple
+
+def van_der_pol_ode(t, state, mu=1.0, omega=1.0):
+    x, v = state
+    return np.array([v, mu * (1 - x**2) * v - omega**2 * x])
+
+def solve_ode(ode_func, initial_state, t_span, dt, **kwargs):
+    t_eval = np.arange(t_span[0], t_span[1] + dt, dt)
+    sol = solve_ivp(ode_func, t_span, initial_state, t_eval=t_eval, args=tuple(kwargs.values()), method='RK45')
+    return sol.t, sol.y.T
+
+def plot_time_evolution(t: np.ndarray, states: np.ndarray, title: str) -> None:
+    plt.figure(figsize=(10, 6))
+    plt.plot(t, states[:, 0], label='Position x(t)')
+    plt.plot(t, states[:, 1], label='Velocity v(t)')
+    plt.xlabel('Time t')
+    plt.ylabel('State Variables')
+    plt.title(title)
+    plt.grid(True)
+    plt.legend()
+    plt.show()
+
+def plot_phase_space(states: np.ndarray, title: str) -> None:
+    plt.figure(figsize=(8, 8))
+    plt.plot(states[:, 0], states[:, 1])
+    plt.xlabel('Position x')
+    plt.ylabel('Velocity v')
+    plt.title(title)
+    plt.grid(True)
+    plt.axis('equal')
+    plt.show()
+
+def analyze_limit_cycle(states: np.ndarray, dt: float) -> Tuple[float, float]:
+    skip = int(len(states) * 0.5)
+    x = states[skip:, 0]
+    t = np.arange(len(x)) * dt
+    peaks = []
+    for i in range(1, len(x)-1):
+        if x[i] > x[i-1] and x[i] > x[i+1]:
+            peaks.append((t[i], x[i]))
+    if len(peaks) < 2:
+        return np.nan, np.nan
+    times, values = zip(*peaks)
+    amplitude = np.mean(values)
+    periods = np.diff(times)
+    period = np.mean(periods) if len(periods) > 0 else np.nan
+    return amplitude, period
+
+def estimate_settling_time(states: np.ndarray, t: np.ndarray, tol: float = 0.01, min_peaks: int = 5) -> float:
+    x = states[:, 0]
+    peaks = []
+    peak_times = []
+    for i in range(1, len(x)-1):
+        if x[i] > x[i-1] and x[i] > x[i+1]:
+            peaks.append(x[i])
+            peak_times.append(t[i])
+    if len(peaks) < min_peaks + 1:
+        return np.nan
+    recent_peaks = peaks[-min_peaks:]
+    if max(recent_peaks) - min(recent_peaks) < tol:
+        return peak_times[-min_peaks]
+    return np.nan
+
+def main():
+    mu_values = [1.0, 2.0, 4.0]
+    omega = 1.0
+    t_span = (0, 100)
+    dt = 0.01
+    initial_state = np.array([1.0, 0.0])
+
+    print(" μ值  |   振幅   |   周期   |  稳态时间  ")
+    print("----------------------------------")
+
+    for mu in mu_values:
+        t, states = solve_ode(van_der_pol_ode, initial_state, t_span, dt, mu=mu, omega=omega)
+        plot_time_evolution(t, states, f'Time Evolution (μ={mu})')
+        plot_phase_space(states, f'Phase Space (μ={mu})')
+
+        amplitude, period = analyze_limit_cycle(states, dt)
+        settling_time = estimate_settling_time(states, t)
+
+        print(f" {mu:.1f}  |  {amplitude:.3f}  |  {period:.3f}  |  {settling_time:.2f}")
+
+if __name__ == "__main__":
+    main()
+
 ```
 
