--- a/project_2_lorenz_equations/实验报告模板.md
+++ b/project_2_lorenz_equations/实验报告模板.md
@@ -104,5 +104,9 @@ dz/dt = xy - bz
 ## 5. 附录：核心代码片段
 
 ```python
-
+def solve_lorenz_equations(sigma=10.0, r=28.0, b=8/3, x0=0.1, y0=0.1, z0=0.1, t_span=(0, 50), dt=0.01):
+    t_eval = np.arange(t_span[0], t_span[1], dt)
+    sol = solve_ivp(lambda t, state: lorenz_system(state, sigma, r, b), 
+                   t_span, [x0, y0, z0], t_eval=t_eval, method='RK45')
+    return sol.t, sol.y
 ```
