--- a/project_4_harmonic_oscillator/实验报告模板.md
+++ b/project_4_harmonic_oscillator/实验报告模板.md
@@ -59,6 +59,8 @@ RK4（四阶龙格-库塔）方法：
 #### 3.1.1 时间演化
 
 1. 插入位移随时间变化的图像
+![7a5e0a8981b3770fe7ea166c19898dcc_nIUoirT+zTAAAAAElFTkSuQmCC](https://github.com/user-attachments/assets/057229b6-5d94-4e4c-8d32-d4d7daf2a28d)
+
 2. 分析运动特征：
    - 振幅
    观察方法：直接测量图像中波峰（最高点）和波谷（最低点）的垂直距离，取半值为振幅。
@@ -98,7 +100,12 @@ RK4（四阶龙格-库塔）方法：
 #### 3.2.1 时间演化
 
 1. 插入位移随时间变化的图像
-2. 分析与简谐振子的区别：
+![Uploading 4ef52156f52c6512d11e54f7282bf45c_VcAZcjiXq2YAAAAASUVORK5CYII=.png…]()
+![image](https://github.com/user-attachments/assets/3aca9c19-3ebf-44bb-bd89-d85e930a3e6e)
+![92f26817f9ee674a202a0f16f6001961_vZ7fbffPUAHyH6vF4PH56CAAAgGfkhAkAAKBAMAEAABQIJgAAgALBBAAAUCCYAAAACgQTAABAgWACAAAoEEwAAAAFggkAAKBAMAEAABQIJgAAgIIPojEIXRrArtwAAAAASUVORK5CYII=](https://github.com/user-attachments/assets/d6f03695-875c-4cd3-885a-c2a67a7b3e9b)
+
+
+3. 分析与简谐振子的区别：
    - 波形特征
    特性	           简谐振子	           非谐振子
    形状	           标准正弦波	           峰值尖锐、谷值平缓
@@ -134,6 +141,8 @@ T随A增大呈双曲线下降。表明周期与振幅成反比。
 #### 3.3.1 简谐振子的相空间轨迹
 
 1. 插入相空间图
+![d422b67532ebedc487ef7ef6d4e5e06e_PQgiIiIiotmAb46JiIiIiAwYjomIiIiIDBiOiYiIiIgMGI6JiIiIiAwYjomIiIiIDBiOiYiIiIgMGI6JiIiIiAwYjomIiIiIDBiOiYiIiIgMGI6JiIiIiAwYjomIiIiIDP4Dc8uQxq3uxO4AAAAASUVORK5CYII=](https://github.com/user-attachments/assets/d04cd25a-d828-44b5-b3ec-f67c190e3a5d)
+
 2. 分析轨迹特征：
    - 形状
    简谐振子的状态由位置x和速度v完全描述，其相空间轨迹为：
@@ -156,6 +165,8 @@ T随A增大呈双曲线下降。表明周期与振幅成反比。
 #### 3.3.2 非谐振子的相空间轨迹
 
 1. 插入相空间图
+![image](https://github.com/user-attachments/assets/a8207a1f-2419-4042-a313-08c71f7981e5)
+
 2. 分析轨迹特征：
    - 与简谐振子的区别
    特性	           简谐振子	            非谐振子
